Stop button text from wrapping

--- a/views/mdc/assets/scss/components/button.scss
+++ b/views/mdc/assets/scss/components/button.scss
@@ -1,6 +1,10 @@
 @import "@material/button/mdc-button";
 @import "@material/icon-button/mdc-icon-button";
 
+.v-button {
+  white-space: nowrap;
+}
+
 .v-button.v-button--image {
   width: 150px;
   height: 45px;
